Fixes text overflow in code mirror container, implements basic expression metadata editor

--- a/client/src/app/routes/dataset/code-editor/code-editor.component.scss
+++ b/client/src/app/routes/dataset/code-editor/code-editor.component.scss
@@ -62,9 +62,18 @@
     expression-text-editor {
         height: 100%;
         display: flex;
+        overflow: scroll;
 
         ::ng-deep .cm-s-pixlise.CodeMirror {
             height: calc(100vh - 48px - 26px - 26px);
+        }
+    }
+
+    &.module {
+        expression-text-editor {
+            ::ng-deep .cm-s-pixlise.CodeMirror {
+                height: calc(100vh - 48px - 24px);
+            }
         }
     }
 
@@ -133,7 +142,7 @@
         box-shadow: 0px 4px 4px 0px #00000040;
         z-index: 100;
 
-        padding: 4px 0;
+        padding: 5px 0;
 
         .split-screen-btn {
             min-width: 115px;
@@ -370,5 +379,11 @@ expression-text-editor.active
     &.confirmed-module {
         background: rgb(var(--clr-gray-90));
         color: white;
+    }
+}
+
+.runtime-container {
+    .runtime-seconds {
+        color: rgb(var(--clr-gray-30));
     }
 }
